outreach guide test styling

--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,5 @@ relative_links:
 #  - ISSUE_TEMPLATE.md
 #  - PULL_REQUEST_TEMPLATE.md
 theme: jekyll-theme-minimal
-title: Outreach Guide
-description: AARS Outreach Guide
+title: AARS Guide 
+#description: AARS Outreach Guide
