--- a/_config.yml
+++ b/_config.yml
@@ -14,4 +14,4 @@ relative_links:
 #  - PULL_REQUEST_TEMPLATE.md
 theme: jekyll-theme-minimal
 title: AARS Guide 
-#description: AARS Outreach Guide
+description: AARS Guide 
