wording in description

--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,5 @@ relative_links:
 #  - ISSUE_TEMPLATE.md
 #  - PULL_REQUEST_TEMPLATE.md
 theme: jekyll-theme-minimal
-title: AARS Guide 
-description: AARS Guide 
+title: AARS Guides 
+description: AARS Guides 
